# latent-space-topology

./: .gitignore  README.md  literature_review.md  project_note.md  pyproject.toml  сравнение_токенизаторов_(1) (2).ipynb
experiment_configs/: confirmatory_h1_v1.json  mapper_node_stability_v1.json
notebook_utils/: __init__.py  diagnostic_workbench.py  encoder_explorer.py  flux_deep_dive.py  flux_tda.py  mapper_explorer.py
notebooks/: 07_stability_and_artifact_controls.ipynb  08_representation_comparison.ipynb  11_metric_preprocessing_sensitivity.ipynb  12_cycle_hunt_long_lived_h1.ipynb  13_confirmatory_h1_sweep.ipynb  14_mapper_flux_intuition.ipynb  15_literature_guided_research_plan.ipynb  16_latent_diagnostic_workbench.ipynb  17_mapper_node_stability_report.ipynb
scripts/: build_confirmatory_h1_notebook.py  build_cycle_hunt_report_notebook.py  build_encoder_notebook.py  build_flux_deep_dive_notebook.py  build_flux_stability_notebook.py  build_flux_tda_notebook.py  build_geometry_notebook.py  build_interpreting_persistent_features_notebook.py  build_latent_diagnostic_workbench_notebook.py  build_literature_guided_research_plan_notebook.py  build_mapper_intuition_notebook.py  build_mapper_node_stability_report_notebook.py  build_metric_preprocessing_sensitivity_notebook.py  build_natural_patch_baseline_notebook.py  build_representation_comparison_notebook.py  download_beans_data.sh  modal_confirmatory_sweep.py  run_confirmatory_sweep.py  run_cycle_hunt.py  run_mapper_node_stability.py  run_witness_cycle_hunt.py
